<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/light_white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/custom_item_margin"
        android:backgroundTint="@color/light_gray"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/margin_top"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:background="@drawable/image_profile_shape"
                android:contentDescription="@string/user_image_description"
                android:scaleType="fitCenter"
                android:src="@drawable/user_profile" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nameTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/dm_sans_bold"
                        android:text="@string/user_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/name_text_size" />

                    <TextView
                        android:id="@+id/appearanceTimeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/appearance_shape"
                        android:fontFamily="@font/dm_sans_regular"
                        android:text="@string/time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/jobTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/dm_sans_medium"
                        android:lineHeight="@dimen/line_height"
                        android:text="@string/user_job"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nationalityTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_medium"
                        android:lineHeight="@dimen/line_height"
                        android:text="@string/user_nationality"
                        android:textColor="@color/dark_blue"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/locationTv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:fontFamily="@font/dm_sans_regular"
                        android:lineHeight="@dimen/line_height"
                        android:text="@string/user_location"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_location" />

                    <TextView
                        android:id="@+id/registrationTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_regular"
                        android:lineHeight="@dimen/line_height"
                        android:text="@string/user_registration_date"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/default_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/totalReviewsTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans_regular"
                        android:lineHeight="@dimen/line_height"
                        android:text="@string/total_reviews"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_text_size" />

                    <TextView
                        android:id="@+id/ratingTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:fontFamily="@font/dm_sans_medium"
                        android:lineHeight="@dimen/line_height"
                        android:text="@string/rating"
                        android:textColor="@color/black"
                        android:textSize="@dimen/default_text_size"
                        app:drawableEndCompat="@drawable/ic_star" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>